物品分类器v1.2 + 移除了不必要的盔甲架。 + 修复了在钻石块上直接放置带有多个物品的箱子且第一格不可分类时所有物品均不会被分类的错误。

--- a/index.html
+++ b/index.html
@@ -117,12 +117,6 @@
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.6">github</a></td>
 		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.6.zip">官方</a></td>
 	</tr>
-	<tr>
-		<td>Java版 1.13.1-1.13.2</td>
-		<td>v1.8.4</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.8.4">github</a></td>
-		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.4.zip">官方</a></td>
-	</tr>
 </tbody></table>
 
 <h3 id="how_to_start">🚀 如何开始</h3>
@@ -132,7 +126,6 @@
 <li><span style="font-weight:bold;">数据包</span>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将文件夹<code>craftingpp</code>(普通生存模式)或文件夹<code>craftingpp_skyisland</code>(空岛生存模式)放入，然后退出世界重进。请勿将两个数据包同时放置在该文件夹内！</li>
 </ul>
 <p>最后请打开<code>选项->语言->强制使用Unicode字体：关</code>。
-<p>如果是v1.9.4及之前的版本，直接下载后解压缩文件至<code>.minecraft/saves/世界名称</code>文件夹即可，模组会自动识别决定是否开启空岛模式(y=0不为基岩)。</p>
 <!--<p>广告：欢迎加入挼苹果服，QQ群号885244850。</p>-->
 
 <h4>模组入门</h4>
@@ -161,7 +154,7 @@
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
 <p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 Rhythm萱 唯一丶为伊 LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 火星浮云 这是彩虹糖呢 SPGoding 支持国产mod 倪采臣 zzzz 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx </span></p>
 <!--一米八微笑 250 明月庄主 250 Rhythm萱 128 LIXIAOGANG 96 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 SPGoding 38 倪采臣 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
-<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a>等小组以及<a href="http://www.mcbbs.net/?1963599">pineapple_</a>、<a href="http://www.mcbbs.net/?160123">贰逼</a>、ECS、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>、Amber、匠魂、Gingerbread、mcer、Stark、yap等玩家亦对此模组有贡献。</p>
+<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a>等小组以及<a href="http://www.mcbbs.net/?1963599">pineapple_</a>、<a href="http://www.mcbbs.net/?160123">贰逼</a>、ECS、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap等玩家亦对此模组有贡献。</p>
 <p>感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
 <!------------------------------------------------------------------------------------------------->
@@ -1989,7 +1982,7 @@
 <span class="empty" title="1点经验 2.5秒"></span></span>
 </td></tr>
 <tr><td><a href="#silicon_dust">硅粉</a>/<a href="#rare_earth_dust">稀土粉</a>/<a href="#steel_dust">钢粉</a>+沙子/<a href="#red_sand">红沙</a><td>
-<span class="ui aiom nh1" title="多功能一体机 高温常压模式">
+<span class="ui aiom nh4" title="多功能一体机 高温常压模式">
 <span class="ci silicon_dust" title="硅粉"></span>
 <span class="sand" title="高温常压"></span>
 <span class="ci silicon_plate" title="硅板"></span>
@@ -2005,7 +1998,7 @@
 <span class="empty" title="4点经验 10秒"></span>
 </span></td></tr>
 
-<tr><th><strong id="splint">碎钻 (Splint)</strong><br />矿物辞典 dict:"diamond_nugget"</th>
+<tr><th><strong id="splint">碎钻 (Splint)</strong><br />矿物辞典 dict:["diamond_nugget"]</th>
 <td>钻石剑<br/>任何钻石工具<br/>任何钻石盔甲<br/>钻石马铠</td>
 <td><span class="ui fur" title="熔炉或高炉">
 <span class="diamond_sword" title="钻石剑"></span>
@@ -2028,7 +2021,7 @@
 </span></td></tr>
 
 <tr><th><strong id="rare_earth_glass">稀土玻璃 (Rare Earth Glass)</strong></th><td><a href="#rare_earth_dust">稀土粉</a>+沙子/<a href="#red_sand">红沙</a>
-<td><span class="ui aiom nh1" title="多功能一体机 高温常压模式">
+<td><span class="ui aiom nh4" title="多功能一体机 高温常压模式">
 <span class="ci rare_earth_dust" title="稀土粉"></span>
 <span class="sand" title="高温常压"></span>
 <span class="ci rare_earth_glass" title="稀土玻璃"></span>
@@ -2037,7 +2030,7 @@
 </span></td></tr>
 
 <tr><th><strong id="reinforced_glass">钢化玻璃 (Reinforced Glass)</strong></th><td><a href="#steel_dust">钢粉</a>+沙子/<a href="#red_sand">红沙</a>
-<td><span class="ui aiom nh1" title="多功能一体机 高温常压模式">
+<td><span class="ui aiom nh4" title="多功能一体机 高温常压模式">
 <span class="ci steel_dust" title="钢粉"></span>
 <span class="sand" title="高温常压"></span>
 <span class="ci reinforced_glass" title="钢化玻璃"></span>
@@ -2046,7 +2039,7 @@
 </span></td></tr>
 
 <tr><th><strong id="silicon_plate">硅板 (Silicon Plate)</strong></th><td><a href="#silicon_dust">硅粉</a>+沙子/<a href="#red_sand">红沙</a>
-<td><span class="ui aiom nh1" title="多功能一体机 高温常压模式">
+<td><span class="ui aiom nh4" title="多功能一体机 高温常压模式">
 <span class="ci silicon_dust" title="硅粉"></span>
 <span class="sand" title="高温常压"></span>
 <span class="ci silicon_plate" title="硅板"></span>
@@ -2387,7 +2380,7 @@
 <h2 id="dusts">粉末</h2>
 
 <table><thead><tr><th>产物</th><th colspan="2">配方</th></tr></thead><tbody>
-<tr><th rowspan="3"><strong id="iron_dust">铁粉 (Iron Dust)</strong><br />矿物辞典 dict:"iron_dust"</th><td>铁锭+燧石<td>
+<tr><th rowspan="3"><strong id="iron_dust">铁粉 (Iron Dust)</strong><br />矿物辞典 dict:["iron_dust"]</th><td>铁锭+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="iron_ingot" title="铁锭"></span>
 <span class="flint" title="燧石"></span>
@@ -2412,7 +2405,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="3"><strong id="gold_dust">金粉 (Gold Dust)</strong><br />矿物辞典 dict:"gold_dust"</th><td>金锭+燧石<td>
+<tr><th rowspan="3"><strong id="gold_dust">金粉 (Gold Dust)</strong><br />矿物辞典 dict:["gold_dust"]</th><td>金锭+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="gold_ingot" title="金锭"></span>
 <span class="flint" title="燧石"></span>
@@ -2437,7 +2430,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="3"><strong id="carbon_dust">碳粉 (Carbon Dust)</strong><br />矿物辞典 dict:"carbon_dust"</th><td>煤炭/木炭/<a href="#cinder">煤渣</a>+燧石<td>
+<tr><th rowspan="3"><strong id="carbon_dust">碳粉 (Carbon Dust)</strong><br />矿物辞典 dict:["carbon_dust"]</th><td>煤炭/木炭/<a href="#cinder">煤渣</a>+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="coal" title="煤炭"></span>
 <span class="flint" title="燧石"></span>
@@ -2462,7 +2455,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="2"><strong id="emerald_dust">绿宝石粉 (Emerald Dust)</strong><br />矿物辞典 dict:"emerald_dust"</th><td>绿宝石+燧石<td>
+<tr><th rowspan="2"><strong id="emerald_dust">绿宝石粉 (Emerald Dust)</strong><br />矿物辞典 dict:["emerald_dust"]</th><td>绿宝石+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="emerald" title="绿宝石"></span>
 <span class="flint" title="燧石"></span>
@@ -2479,7 +2472,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="4"><strong id="diamond_dust">钻石粉 (Diamond Dust)</strong><br />矿物辞典 dict:"diamond_dust"</th><td>钻石+燧石<td>
+<tr><th rowspan="4"><strong id="diamond_dust">钻石粉 (Diamond Dust)</strong><br />矿物辞典 dict:["diamond_dust"]</th><td>钻石+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="diamond" title="钻石"></span>
 <span class="flint" title="燧石"></span>
@@ -2512,7 +2505,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="2"><strong id="quartz_dust">石英粉 (Quartz Dust)</strong><br />矿物辞典 dict:"quartz_dust"</th><td>石英/花岗岩/安山岩/闪长岩+燧石<td>
+<tr><th rowspan="2"><strong id="quartz_dust">石英粉 (Quartz Dust)</strong><br />矿物辞典 dict:["quartz_dust"]</th><td>石英/花岗岩/安山岩/闪长岩+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="quartz" title="石英"></span>
 <span class="flint" title="燧石"></span>
@@ -2574,7 +2567,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th><strong id="steel_dust">钢粉 (Steel Dust)</strong><br />矿物辞典 dict:"steel_dust"</th><td><a href="#carbon_dust">碳粉</a>+<a href="#iron_dust">铁粉</a></td>
+<tr><th><strong id="steel_dust">钢粉 (Steel Dust)</strong><br />矿物辞典 dict:["steel_dust"]</th><td><a href="#carbon_dust">碳粉</a>+<a href="#iron_dust">铁粉</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="empty"></span>
 <span class="ci carbon_dust" title="碳粉"></span>
@@ -2610,7 +2603,7 @@
 <h2 id="bottles">瓶装物品</h2>
 
 <table><thead><tr><th>产物</th><th colspan="2">配方</th></tr></thead><tbody>
-<tr><th><strong id="bottle_of_salt">盐瓶 (Bottle of Salt)</strong><br />矿物辞典 dict:"salt"</th><td>玻璃瓶+沙子/<a href="#red_sand">红沙</a><td>
+<tr><th><strong id="bottle_of_salt">盐瓶 (Bottle of Salt)</strong><br />矿物辞典 dict:["salt"]</th><td>玻璃瓶+沙子/<a href="#red_sand">红沙</a><td>
 <span class="ui aiom nh4" title="多功能一体机 高温常压模式">
 <span class="glass_bottle" title="玻璃瓶"></span>
 <span class="sand" title="沙子"></span>
@@ -2719,7 +2712,7 @@
 <span class="green_dye" title="绿色染料"></span>
 <span class="ci green_force_of_water" title="绿色水之力"></span>
 </span></td>
-<td>右击放置一格水，在下界亦可正常使用。<span style="font-style:itapc;">Surrare Lilpana!</span></td></tr>
+<td>右击放置一格水，在下界亦可正常使用。<em>Surrare Lilpana!</em></td></tr>
 
 <tr><th><strong id="cyan_force_of_mountain">青色山之力 (Cyan Force of Mountain)</strong></th><td>青色染料+铁锭+<a href="#limb_of_ridge">山脉之肢</a></td>
 <td><span class="ui cm" title="合成器">
@@ -2749,7 +2742,7 @@
 <span class="orange_dye" title="橙色染料"></span>
 <span class="ci orange_force_of_dirt" title="橙色土之力"></span>
 </span></td>
-<td>右击破坏土质方块。<span style="font-style:itapc;">Defla Forces!</span></td></tr>
+<td>右击破坏土质方块。<em>Defla Forces!</em></td></tr>
 
 <tr><th><strong id="yellow_force_of_earth">黄色地之力 (Yellow Force of Earth)</strong></th><td>黄色染料+金锭+<a href="#certification_of_earth">大地之证</a></td>
 <td><span class="ui cm" title="合成器">
@@ -2779,7 +2772,7 @@
 <span class="red_dye" title="红色染料"></span>
 <span class="ci red_force_of_fire" title="红色火之力"></span>
 </span></td>
-<td>右击烧炼方块成物品。<span style="font-style:itapc;">Fial Forces!</span></td></tr>
+<td>右击烧炼方块成物品。<em>Fial Forces!</em></td></tr>
 
 <tr><th><strong id="purple_force_of_life">紫色命之力 (Purple Force of Life)</strong></th><td>紫色染料+钻石+<a href="#spirit_of_life">生命之灵</a></td>
 <td><span class="ui cm" title="合成器">
@@ -2921,7 +2914,7 @@
 <span class="empty"></span>
 <span class="ci origin_of_the_world" title="世界之源"></span>
 </span></td>
-<td>右击消耗20点经验返回复活点，若无复活点则返回主世界<abbr title="指X与Z为(0,0)的地表">原点</a>附近。<em>Slonhon Ral!</em></td></tr>
+<td>右击消耗20点经验返回复活点，若无复活点则返回出生的附近。<em>Slonhon Ral!</em></td></tr>
 
 <tr><th><strong id="compressor">压缩器 (Comperessor)</strong></th><td>附魔之瓶+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+活塞+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#silicon_plate">硅板</a></td>
 <td><span class="ui cm" title="合成器">
@@ -3111,12 +3104,12 @@
 	盾牌(The Command Power 标志)<br/>
 	盾牌(Command Block Logic 标志)<br/>
 	盾牌(Nuclear Fusion 标志)</th>
-<td>盾牌+<a href="#bilibili_logo">哔哩哔哩标志</a><br/>
-	盾牌+<a href="#github_logo">github标志</a><br/>
-	盾牌+<a href="#mcmod_logo">mcmod标志</a><br/>
-	盾牌+<a href="#tcp_logo">The Command Power 标志</a><br/>
-	盾牌+<a href="#cbl_logo">Command Block Logic 标志</a><br/>
-	盾牌+<a href="#nf_logo">Nuclear Fusion 标志</a></td>
+<td>盾牌+<a href="#logos">哔哩哔哩标志</a><br/>
+	盾牌+<a href="#logos">github标志</a><br/>
+	盾牌+<a href="#logos">mcmod标志</a><br/>
+	盾牌+<a href="#logos">The Command Power 标志</a><br/>
+	盾牌+<a href="#logos">Command Block Logic 标志</a><br/>
+	盾牌+<a href="#logos">Nuclear Fusion 标志</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="shield" title="盾牌"></span>
 <span class="ci bilibili_logo" title="哔哩哔哩标志"></span>
@@ -3367,7 +3360,7 @@
 <li><strong id="golem_warrior">傀儡战士 (Golem Warrior)</strong>：杀死接触的非玩家生物。支持抢夺魔咒。</li>
 <li><strong id="golem_herder">傀儡牧民 (Golem Herder)</strong>：繁殖接触的成年动物。</li>
 </ul>
-<p>手持傀儡对着控制方块右击放置，放置后即开始高速移动。接触控制方块后会转向，<span style="color:red">注意请将控制方块合理放置使得傀儡可以沿着路径循环，否则傀儡有可能飞出加载区块！</span></p>
+<p>手持傀儡对着控制方块右击放置，放置后即开始高速移动。接触控制方块后会转向，<span style="color:red">注意请将控制方块合理放置使得傀儡可以沿着路径循环，否则傀儡有可能飞出加载区块！建议先在单机测试！</span></p>
 <p>和平模式下傀儡会直接消失。</p>
 <p>傀儡杀死生物、钓鱼或挖矿会积累经验并存储为附魔之瓶。</p>
 
