--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.11">github</a></td>
 		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.11.zip">官方</a></td>
 	</tr>
+	<tr>
+		<td>Java版 1.13.1-1.13.2</td>
+		<td>v1.8.4</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.8.4">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.4.zip">官方</a></td>
+	</tr>
 </tbody></table>
 
 <h3 id="how_to_start">🚀 如何开始</h3>
