--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.9.15</title>
+<title>更多的合成 Crafting++ v1.9.16-m08d23</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
@@ -50,6 +50,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。</p>
 <p>最新正式版本为v1.9.15，于2019年8月23日发布，支持Minecraft 1.14.x版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
+<p>最新测试版本为v1.9.16-m08d23，于2019年8月23日发布，支持Minecraft 1.15快照版本。此次更新旨在支持1.15的新内容蜜蜂。</p>
 <p>本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
 
 <h3 id="download">📦 下载地址</h3>
@@ -63,6 +64,12 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th colspan="2">下载地址</th></tr></thead>
 <tbody>
+	<tr>
+		<td>Java版 快照19w34a</td>
+		<td>v1.9.16-m08d23</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.16-m08d23">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.16-m08d23.zip">官方</a></td>
+	</tr>
 	<tr>
 		<td>Java版 1.14.x</td>
 		<td>v1.9.15</td>
@@ -1452,6 +1459,11 @@
 </span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
 </span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
 
+<tr><td>蜜蜂</td><td><img src="https://gamepedia.cursecdn.com/minecraft_gamepedia/e/ed/BeeFace.png" title="蜜蜂" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
+</span></span><span class="ui slot"><span class="poppy" title="虞美人">
+</span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
+</span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
+
 
 </tbody></table>
 
@@ -1793,7 +1805,7 @@
 <tr>
 	<th><strong id="wing_of_sky">天空之翼 (Wing of Sky)</strong></th>
 	<th><span class="ui single"><span class="ci wing_of_sky"></span></span></th>
-	<td>蝙蝠/恶魂/幻翼/鸡/烈焰人/恼鬼/鹦鹉被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</td></tr>
+	<td>蝙蝠/恶魂/幻翼/鸡/烈焰人/恼鬼/鹦鹉/蜜蜂被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</td></tr>
 <tr>
 	<th><strong id="heart_of_ocean">水晶之心 (Heart of Crystal)</td>
 	<th><span class="ui single"><span class="ci heart_of_ocean"></span></span></th>
