--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 <li><span style="font-weight:bold;">数据包</span>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将文件夹<code>craftingpp</code>(普通生存模式)或文件夹<code>craftingpp_skyisland</code>(空岛生存模式)放入，然后退出世界重进。请勿将两个数据包同时放置在该文件夹内！</li>
 </ul>
 <p>最后请打开<code>选项->语言->强制使用Unicode字体：关</code>。
-<!--<p>广告：欢迎加入挼苹果服，QQ群号885244850。</p>-->
+<p><strong>广告：欢迎加入挼苹果服，QQ群号885244850。本服目前处于开荒期。</strong></p>
+<p><strong>广告：欢迎加入Haizara服，QQ群号415344316。新服企划中，计划装有6个原版模组。</strong></p>
 
 <h4>模组入门</h4>
 <p>大部分合成需使用<a href="#crafting_machine"><span class="ui single"><span class="ci crafting_machine"></span></span>合成器</a>。模组需要的附魔之瓶可通过副手持有漏斗获取。</p>
@@ -139,7 +140,7 @@
 <h3 id="acknowledge">👷 制作者名单</h3>
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree XeKr 折君 天狼星black MC先生</p>
-<p><span style="font-weight:bold;">服务器支持</span>：HerobrineXia SorrowRain 苹果果</p>
+<p><span style="font-weight:bold;">服务器支持</span>：白天 苹果果 HerobrineXia SorrowRain</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
 <p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 Rhythm萱 唯一丶为伊 LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 火星浮云 这是彩虹糖呢 SPGoding 支持国产mod 倪采臣 zzzz 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx </span></p>
 <!--一米八微笑 250 明月庄主 250 Rhythm萱 128 LIXIAOGANG 96 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 SPGoding 38 倪采臣 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
