--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </ul>
 <p>最后请打开<code>选项->语言->强制使用Unicode字体：关</code>。
 <p><strong>广告：欢迎加入挼苹果服，QQ群号885244850。本服目前处于开荒期。</strong></p>
-<p><strong>广告：欢迎加入Haizara服，QQ群号415344316。新服企划中，计划装有6个原版模组。</strong></p>
+<p><strong>广告：欢迎加入挼白天服，QQ群号415344316。新服企划中，计划装有6个原版模组。</strong></p>
 
 <h4>模组入门</h4>
 <p>大部分合成需使用<a href="#crafting_machine"><span class="ui single"><span class="ci crafting_machine"></span></span>合成器</a>。模组需要的附魔之瓶可通过副手持有漏斗获取。</p>
@@ -5512,7 +5512,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-08-23</p>
+<p>最后更新 2019-08-30</p>
 </footer>
 </article>
 </body></html>
