--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 <li><span style="font-weight:bold;">数据包</span>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将文件夹<code>craftingpp</code>(普通生存模式)或文件夹<code>craftingpp_skyisland</code>(空岛生存模式)放入，然后退出世界重进。请勿将两个数据包同时放置在该文件夹内！</li>
 </ul>
 <p>最后请打开<code>选项->语言->强制使用Unicode字体：关</code>。
-<p><strong>广告：欢迎加入挼苹果服，QQ群号885244850。本服目前处于开荒期。</strong></p>
-<p><strong>广告：欢迎加入挼白天服，QQ群号415344316。新服企划中，计划装有6个原版模组。</strong></p>
+<p><strong>广告：欢迎加入挼苹果服，QQ群号885244850。新周目企划中，计划装有3个原版模组+1特色插件。</strong></p>
+<p><strong>广告：欢迎加入挼白天服，QQ群号415344316。新服企划中，计划装有6个原版模组，正版验证。</strong></p>
 
 <h4>模组入门</h4>
 <p>大部分合成需使用<a href="#crafting_machine"><span class="ui single"><span class="ci crafting_machine"></span></span>合成器</a>。模组需要的附魔之瓶可通过副手持有漏斗获取。</p>
