--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <p>下载后解压缩。</p>
 <ul>
 <li><span style="font-weight:bold;">资源包</span>文件夹位于<code>.minecraft/resourcepacks</code>文件夹，该文件夹也可从游戏界面<code>选项->资源包->打开资源包文件夹</code>处打开。将<code>craftingpp_resources.zip</code>放入，然后进入选择资源包的页面，选择该资源包至右侧已选的资源包。如果仍然无法使用，请解压后放入。</li>
-<li><span style="font-weight:bold;">数据包</span>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将文件夹<code>craftingpp</code>放入，然后退出世界重进。请勿将两个数据包同时放置在该文件夹内！</li>
+<li><span style="font-weight:bold;">数据包</span>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将文件夹<code>craftingpp</code>放入，然后退出世界重进。</li>
 </ul>
 <p>最后请打开<code>选项->语言->强制使用Unicode字体：关</code>。
 <h4>模组入门</h4>
