--- a/1.9.html
+++ b/1.9.html
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.9.16</title>
+<title>更多的合成 Crafting++ v1.9.18</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
@@ -47,10 +47,10 @@
 <!-------------------------------------------------------------------------------------------------->
 <h2 id="introduction">简介</h2>
 <p>🎉欢迎来到《更多的合成》百科！</p>
-<p>1.9.17，于2019年10月17日发布，支持Minecraft 1.14.x版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
+<p>1.9.18，于2019年10月25日发布，支持Minecraft 1.14.x版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
 
 <h3 id="download">📦 下载地址</h3>
-<p>本页面所列内容为1.9.17版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tags">点击此处查看</a>。</p>
+<p>本页面所列内容为1.9.18版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tags">点击此处查看</a>。</p>
 <ul>
 	<li><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a></li>
 	<li><a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs中文论坛页面</a></li>
@@ -62,9 +62,9 @@
 <tbody>
 	<tr>
 		<td>Java版 1.14.x</td>
-		<td>v1.9.17</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.17">github</a></td>
-		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.17.zip">官方</a></td>
+		<td>v1.9.18</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.18">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.18.zip">官方</a></td>
 	</tr>
 </tbody></table>
 
@@ -5117,7 +5117,7 @@
 <h2 id="block_sky_domain">空域开端</h2>
 <p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>进入。也可输入下述命令手动开启<code>/scoreboard players set #skyislandMode cppValue 1</code></p>
 <p>该数据包旨在为空岛玩家提供从泥土到末地的完整科技链。加载后会生成一块基岩和一个箱子，箱子内包含1泥土、1橡树树苗、16骨粉。</p>
-<p>空岛模式下不会生成模组的结构。</p>
+<p>空岛模式下不会生成模组的结构。不同玩家的间距为100米。</p>
 <p>玩家破坏树叶、草丛、枯萎的灌木、海草会掉落下述物品。</p>
 
 <table style="font-size:88%;text-align:center">
@@ -5468,7 +5468,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-10-17</p>
+<p>最后更新 2019-10-25</p>
 </footer>
 </article>
 </body></html>
