--- a/1.9.html
+++ b/1.9.html
@@ -5115,7 +5115,7 @@
 
 <!------------------------------------------------------------------------------------------------->
 <h2 id="block_sky_domain">空域开端</h2>
-<p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>进入。也可输入下述命令手动开启<code>/scoreboard players set #skyislandMode cppValue 1</code></p>
+<p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:flower_forest;</code>进入。也可输入下述命令手动开启<code>/scoreboard players set #skyislandMode cppValue 1</code></p>
 <p>该数据包旨在为空岛玩家提供从泥土到末地的完整科技链。加载后会生成一块基岩和一个箱子，箱子内包含1泥土、1橡树树苗、16骨粉。</p>
 <p>空岛模式下不会生成模组的结构，不同玩家的间距默认为200米。</p>
 <p>玩家破坏树叶会额外掉落骨粉和线。</p>
