# 1.9.23 + 修复了胡萝卜钓竿的手持朝向问题。 + 修复了消音器不能正常工作的问题。 + 修复了空岛下杀死生物沙子不会变成灵魂沙的问题。 + 空岛初始给予4个橡树树苗而不是1个。 + 空岛原点平台为修改为基岩，并移除传送用的命令方块。 + 现在空岛出生点附近的生存玩家会直接被传送回家。 + 修复了枯萎的灌木无额外掉落物的问题。 + 枯萎的灌木不再掉落仙人掌、甘蔗、可可豆。 + 修复了展示框内没有物品也会进行仪式的问题。 + 现在空岛合成表在普通模式下也可使用。 + 空岛默认玩家间距修改为10000米。 + 修复了机器下方为墙上的红石火把时不能令机器停止工作的问题。 + 修复了机器上方为激活的压力板时不能令机器停止工作的问题。 + 修复了傀儡战士杀死生物时掉落物位置错误的问题。

--- a/1.9.html
+++ b/1.9.html
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.9.22</title>
+<title>更多的合成 Crafting++ v1.9.23</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
@@ -47,10 +47,10 @@
 <!-------------------------------------------------------------------------------------------------->
 <h2 id="introduction">简介</h2>
 <p>🎉欢迎来到《更多的合成》百科！</p>
-<p>1.9.22，于2019年10月29日发布，支持Minecraft 1.14.x版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
+<p>1.9.23，于2019年10月29日发布，支持Minecraft 1.14.x版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
 
 <h3 id="download">📦 下载地址</h3>
-<p>本页面所列内容为1.9.22版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tags">点击此处查看</a>。</p>
+<p>本页面所列内容为1.9.23版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tags">点击此处查看</a>。</p>
 <ul>
 	<li><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a></li>
 	<li><a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs中文论坛页面</a></li>
@@ -62,9 +62,9 @@
 <tbody>
 	<tr>
 		<td>Java版 1.14.x</td>
-		<td>v1.9.22</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.22">github</a></td>
-		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.22.zip">官方</a></td>
+		<td>v1.9.23</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.23">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.23.zip">官方</a></td>
 	</tr>
 </tbody></table>
 
@@ -713,7 +713,7 @@
 <td><a href="#enchanted_iron">附魔铁锭</a>+<a href="#golem">傀儡</a>+木桶+绿宝石+<a href="#certification_of_earth">大地之证</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="ci enchanted_iron" title="附魔铁锭"></span>
-<span class="ci golem" title="傀儡"></span>
+<span class="ci empty_golem" title="傀儡"></span>
 <span class="ci enchanted_iron" title="附魔铁锭"></span>
 <span class="ci enchanted_iron" title="附魔铁锭"></span>
 <span class="barrel" title="木桶"></span>
@@ -3297,7 +3297,7 @@
 </tbody></table>
 
 <h3 id="golem">傀儡 (Golem)</h3>
-<span class="ui single"><span class="ci golem"></span></span>
+<span class="ui single"><span class="ci empty_golem"></span></span>
 <span class="ui single"><span class="ci golem_farmer"></span></span>
 <span class="ui single"><span class="ci golem_miner"></span></span>
 <span class="ui single"><span class="ci golem_fisher"></span></span>
@@ -3339,7 +3339,7 @@
 <span class="armor_stand" title="盔甲架"></span>
 <span class="diamond_boots" title="钻石靴子"></span>
 <span class="armor_stand" title="盔甲架"></span>
-<span class="ci golem" title="傀儡"></span>
+<span class="ci empty_golem" title="傀儡"></span>
 </span></span></td></tr>
 
 <tr><th>傀儡农民<br/>
@@ -3353,7 +3353,7 @@
 	傀儡+<a href="#angry_hand">愤怒之手</a><br/>
 	傀儡+<a href="#toughen_hand">历练之手</a></td>
 <td><span class="ui cm" title="合成器">
-<span class="ci golem" title="傀儡"></span>
+<span class="ci empty_golem" title="傀儡"></span>
 <span class="ci industrious_hand" title="勤劳之手"></span>
 <span class="empty"></span>
 <span class="empty"></span>
