--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 <p><a style="font-weight:bold;">数据包设计</a>：ruhuasiyu</p>
 <p><a style="font-weight:bold;">资源包设计</a>：ruhuasiyu RubberTree XeKr 折君 天狼星black MC先生</p>
 <p><a style="font-weight:bold;">平台支持</a>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
-<p><a style="font-weight:bold;">赞助名单</a>：<a style="color:blue;">一米八微笑 明月庄主 Rhythm萱 唯一丶为伊 小吴小吴 LIXIAOGANG SPGoding 陌余Oucher uuu2011 爱发电用户_AU9c 火星浮云 这是彩虹糖呢 支持国产mod 倪采臣 zzzz 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx </a></p>
-<!--一米八微笑 250 明月庄主 250 Rhythm萱 128 小吴小吴 100 LIXIAOGANG 96 SPGoding 88 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
+<p><a style="font-weight:bold;">赞助名单</a>：<a style="color:blue;">一米八微笑 明月庄主 Rhythm萱 唯一丶为伊 月下贱影 LIXIAOGANG SPGoding 陌余Oucher uuu2011 爱发电用户_AU9c 火星浮云 这是彩虹糖呢 支持国产mod 倪采臣 zzzz 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx </a></p>
+<!--一米八微笑 250 明月庄主 250 Rhythm萱 128 月下贱影 100 LIXIAOGANG 96 SPGoding 88 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
 <p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a>等小组以及<a href="http://www.mcbbs.net/?1963599">pineapple_</a>、<a href="http://www.mcbbs.net/?160123">贰逼</a>、ECS、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap等玩家亦对此模组有贡献。</p>
 <p>感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
@@ -126,7 +126,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-10-29</p>
+<p>最后更新 2019-11-17</p>
 </footer>
 </article>
 </body></html>
