--- a/new.html
+++ b/new.html
@@ -8015,18 +8015,38 @@
 	</span></p>
 
 <h4 id="附魔书制作">附魔书制作</h4>
+<p><span class="version">1.10</span></p>
 <ul>
 <li>魔杖等级：至少1级</li>
 <li>附加物：书</li>
 <li>时长：60秒</li>
-<li>消耗材料：青金石+<a href="#附魔之瓶">附魔之瓶</a>+<a href="#稀有掉落物">稀有掉落物</a>/下界之星</li>
+<li>消耗材料：青金石+<a href="#附魔之瓶">附魔之瓶</a>+<a href="#天空之翼">稀有掉落物</a></li>
+</ul>
+<p><span class="ui dp">
+		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
+		<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
+		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
+		<a class="lapis_lazuli" title="青金石"></a>
+		<a class="lapis_lazuli" title="青金石"></a>
+		<a class="lapis_lazuli" title="青金石"></a>
+		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
+		<a href="#天空之翼" class="ci soul_of_dirt" title="稀有掉落物"></a>
+		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
+	</span></p>
+<p>可制作除诅咒外的36种魔咒的最高等级附魔书。每种组合(共49种)对应一种魔咒，该对应关系在模组首次载入时被决定。</p>
+<p><span class="oldversion">1.9</span></p>
+<ul>
+<li>魔杖等级：至少1级</li>
+<li>附加物：书</li>
+<li>时长：60秒</li>
+<li>消耗材料：青金石+<a href="#附魔之瓶">附魔之瓶</a>+<a href="#天空之翼">稀有掉落物</a>/下界之星</li>
 </ul>
 <p><span class="ui dp">
 		<a class="lapis_lazuli" title="青金石"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
 		<a class="lapis_lazuli" title="青金石"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
-		<a href="#稀有掉落物" class="ci wing_of_sky" title="稀有掉落物"></a>
+		<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
 		<a class="lapis_lazuli" title="青金石"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
@@ -8039,99 +8059,115 @@
 <li>魔杖等级：至少2级</li>
 <li>附加物：任意物品</li>
 <li>时长：60秒</li>
-<li>消耗材料：高级药水+<a href="#附魔之瓶">附魔之瓶</a>+<a href="#稀有掉落物">稀有掉落物</a>/下界之星</li>
+<li>(1.10)消耗材料：药剂+<a href="#附魔之瓶">附魔之瓶</a>+<a href="#天空之翼">稀有掉落物</a></li>
+<li>(1.9)消耗材料：高级药水+<a href="#附魔之瓶">附魔之瓶</a>+<a href="#天空之翼">稀有掉落物</a>/下界之星</li>
 </ul>
 <p><span class="ui dp">
-		<a class="potion_of_fire_resistance" title="抗火药水"></a>
+		<a class="ci agentia_of_bounce" title="抗火药水"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
-		<a class="potion_of_fire_resistance" title="抗火药水"></a>
+		<a class="ci agentia_of_bounce" title="抗火药水"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
-		<a href="#稀有掉落物" class="ci wing_of_sky" title="稀有掉落物"></a>
+		<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
-		<a class="potion_of_fire_resistance" title="抗火药水"></a>
+		<a class="ci agentia_of_bounce" title="抗火药水"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
-		<a class="potion_of_fire_resistance" title="抗火药水"></a>
+		<a class="ci agentia_of_bounce" title="抗火药水"></a>
 	</span></p>
 
 <table><thead><tr><th>状态效果</th>
-	<th>所需药水</th>
+	<th>所需药水(1.9)</th>
+	<th>所需药水(1.10)</th>
 	<th>附加物</th>
 </tr></thead><tbody>
 <tr><td>速度</td>
 	<td><a href="#potion_of_swiftness">迅捷药水</a> (速度 II 8:00)</td>
+	<td><a href="#敏捷药剂">敏捷药剂</a> (速度 II 4:00)</td>
 	<td>靴子</td>
 </tr>
 <tr><td>跳跃提升</td>
 	<td><a href="#potion_of_leaping">跳跃药水</a> (跳跃提升 II 8:00)</td>
+	<td><a href="#弹力药剂">弹力药剂</a> (跳跃提升 II 4:00)</td>
 	<td>靴子</td>
 </tr>
 <tr><td>急迫</td>
 	<td><a href="#potion_of_haste">急迫药水</a> (急迫 II 8:00)</td>
+	<td><a href="#极限药剂">极限药剂</a> (急迫 II 4:00)</td>
 	<td>手持物</td>
 </tr>
 <tr><td>力量</td>
 	<td><a href="#potion_of_strength">力量药水</a> (力量 II 8:00)</td>
+	<td><a href="#锋锐药剂">锋锐药剂</a> (力量 II 4:00)</td>
 	<td>手持物</td>
 </tr>
 <tr><td>再生</td>
 	<td><a href="#potion_of_regeneration">再生药水</a> (生命恢复 II 1:30)</td>
+	<td><a href="#回春药剂">回春药剂</a> (生命恢复 II 2:00)</td>
 	<td>盔甲</td>
 </tr>
 <tr><td>抗性提升</td>
 	<td><a href="#potion_of_resistance">抗性药水</a> (抗性提升 II 8:00)</td>
+	<td><a href="#护盾药剂">护盾药剂</a> (抗性提升 II 4:00)</td>
 	<td>盔甲</td>
 </tr>
 <tr><td>防火</td>
 	<td><a href="#potion_of_fire_resistance">抗火药水</a> (防火 16:00)</td>
+	<td><a href="#炎盾药剂">炎盾药剂</a> (防火 8:00)</td>
 	<td>盔甲</td>
 </tr>
 <tr><td>隐身</td>
 	<td><a href="#potion_of_invisibility">隐身药水</a> (隐身 16:00)</td>
+	<td><a href="#透明药剂">透明药剂</a> (隐身 8:00)</td>
 	<td>盔甲</td>
 </tr>
 <tr><td>水下呼吸</td>
 	<td><a href="#potion_of_water_breathing">水肺药水</a> (水下呼吸 16:00)</td>
+	<td><a href="#避水药剂">避水药剂</a> (水下呼吸 8:00)</td>
 	<td>头盔</td>
 </tr>
 <tr><td>夜视</td>
 	<td><a href="#potion_of_night_vision">夜视药水</a> (夜视 16:00)</td>
+	<td><a href="#明目药剂">明目药剂</a> (夜视 8:00)</td>
 	<td>头盔</td>
 </tr>
 <tr><td>饱和</td>
+	<td><a href="#冷饮">冷饮</a> (饱和 IV)</td>
 	<td><a href="#冷饮">冷饮</a> (饱和 IV)</td>
 	<td>头盔</td>
 </tr>
 <tr><td>缓落</td>
 	<td><a href="#potion_of_slow_falling">缓降药水</a> (缓降 8:00)</td>
+	<td><a href="#轻盈药剂">轻盈药剂</a> (缓降 4:00)</td>
 	<td>靴子</td>
 </tr>
 <tr><td>潮涌能量</td>
 	<td><a href="#potion_of_tide">潮汐药水</a> (潮涌能量 8:00)</td>
+	<td><a href="#潮汐药剂">潮汐药剂</a> (潮涌能量 4:00)</td>
 	<td>头盔</td>
 </tr>
 <tr><td>连锁</td>
 	<td><a href="#potion_of_chain">连环药水</a> (连锁 8:00)</td>
-	<td>斧、镐、锹</td></tr>
+	<td><a href="#连环药剂">连环药剂</a> (连锁 8:00)</td>
+	<td>斧、镐、锹、锄</td></tr>
 </tbody></table>
 
 <p>每件物品只可附加一种效果。效果可重复附加，之前的效果将会被覆盖。</p>
 <p>盔甲效果在对应栏位生效，剑和工具在主手生效，每秒消耗1点经验值，重复的效果不会叠加但消耗的经验值会叠加。使用<a href="#节制器">节制器</a>可开启/关闭所有效果。连锁效果无消耗。</p>
 
-<p>连锁效果下，使用斧可以破坏相连的木头/瓜/成熟作物；镐可以破坏相连的矿物/黑曜石；锹可以破坏相连的沙子/红沙/砂砾/粘土块；锄可以破坏相连的干草块/地狱疣块/诡异疣块/菌光体。受附魔影响。工具不会损坏，至少会保留1点耐久。</p>
+<p>连锁效果下，使用斧可以破坏相连的木头/瓜/成熟作物；镐可以破坏相连的矿物/黑曜石；锹可以破坏相连的沙子/红沙/砂砾/粘土块；1.10的锄可以破坏相连的干草块/地狱疣块/诡异疣块/菌光体。受附魔影响。工具不会损坏，至少会保留1点耐久。</p>
 
 <h4 id="属性附加">属性附加</h4>
 <ul>
 <li>魔杖等级：至少3级</li>
 <li>附加物：可佩戴的物品和武器</li>
 <li>时长：60秒</li>
-<li>消耗材料：金锭+<a href="#附魔之瓶">附魔之瓶</a>+<a href="#稀有掉落物">稀有掉落物</a>/下界之星</li>
+<li>消耗材料：金锭+<a href="#附魔之瓶">附魔之瓶</a>+<a href="#天空之翼">稀有掉落物</a>/1.9允许下界之星</li>
 </ul>
 <p><span class="ui dp">
 		<a class="gold_ingot" title="金锭"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
 		<a class="gold_ingot" title="金锭"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
-		<a href="#稀有掉落物" class="ci wing_of_sky" title="稀有掉落物"></a>
+		<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
 		<a class="gold_ingot" title="金锭"></a>
 		<a class="experience_bottle" title="附魔之瓶"><span class="stack">16</span></a>
@@ -8146,7 +8182,7 @@
 <p>盔甲可附加属性：</p>
 <ul>
 	<li>最大生命值 +0~5</li>
-	<li>抗击退 +0~0.3</li>
+	<li>抗击退 +0~3</li>
 	<li>速度 +0%~15%</li>
 	<li>幸运 +0~2</li>
 </ul>
@@ -8154,7 +8190,7 @@
 
 <p><img style="width:48%" src="items/screenshots/rituals.png" alt="仪式执行中" /> <img style="width:48%" src="items/screenshots/helmet.png" alt="附有效果和属性附加的钻石头盔" /></p>
 
-<h3 id="dark_rituals">黑暗仪式</h3>
+<h3 id="黑暗仪式">黑暗仪式</h3>
 <p>在地面摆出如下形状，然后在基岩上方放置发射器，并在发射器上方放置物品展示框。将材料放入发射器，将待处理的物品放入物品展示框，使用黑暗魔杖shift右击并等待即可。</p>
 <p><span class="ui dp">
 		<a class="obsidian" title="黑曜石"></a>
@@ -8173,7 +8209,7 @@
 <li>魔杖等级：黑暗魔杖</li>
 <li>附加物：<a href="#黑暗碎片">破损刷怪箱</a></li>
 <li>时长：60秒</li>
-<li>消耗材料：<a href="#黑暗碎片">黑暗碎片</a>+稀有掉落物/下界之星</li>
+<li>消耗材料：<a href="#黑暗碎片">黑暗碎片</a>+稀有掉落物/1.9允许下界之星</li>
 <li>消耗施法者生命：12点</li>
 </ul>
 <p><span class="ui dp">
@@ -8181,7 +8217,7 @@
 		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
 		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
 		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-		<a href="#稀有掉落物" class="ci wing_of_sky" title="稀有掉落物"></a>
+		<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
 		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
 		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
 		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
@@ -9493,7 +9529,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2019-12-01</p>
+<p>最后更新 2020-03-13</p>
 </footer>
 
 </article>
