测试版发布

--- a/1.9.html
+++ b/1.9.html
@@ -4264,7 +4264,7 @@
 <p>仪式完成后，破损刷怪箱将会变成刷怪箱。</p>
 
 <h3 id="magic">魔法</h3>
-<p>若要使用魔法，玩家需要副手持有魔杖，此时会显示技能菜单和魔法值。通过滚动鼠标滑轮来选择相应魔法，然后按下F键发动。玩家需要拥有足够的魔法值。</p>
+<p><span class="oldversion">1.9</span> 若要使用魔法，玩家需要副手持有魔杖，此时会显示技能菜单和魔法值。通过滚动鼠标滑轮来选择相应魔法，然后按下F键发动。玩家需要拥有足够的魔法值。</p>
 <table><thead><tr><th colspan="2">魔法</th><th>效果</th><th>范围/时长</th><th>魔杖等级</th><th>魔法值</th></tr></thead><tbody>
 <tr><td rowspan="3"><span class="ui single"><span class="ci summon_wind"></span></span></td><td rowspan="3">召唤术：风</td><td rowspan="3">将前方一定范围内实体吹向空中并掉落</td>
 	<td>半径2米</td><td>1级</td><td rowspan="3">10</td></tr>
